--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Ice Slide Puzzle</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Ice Slide Puzzle</h1>
 
@@ -37,4 +40,5 @@
     <script src="gameManager.js"></script>
     <script src="main.js"></script>
 </body>
+
 </html>
