디자인 수정

--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
 
         <div class="controls">
             <button id="resetBtn">Reset</button>
-        </div>
-
-        <div class="info">
-            <p id="scoreDisplay">Moves: 0</p>
-            <p id="minMovesDisplay">Minimum Moves: 0</p>
+            <span id="scoreDisplay">Moves: 0</span>
+            <span id="minMovesDisplay">Minimum Moves: 0</span>
         </div>
     </div>
 
