결과창 공유

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
         </div>
     </div>
 
+    <!-- Modal for Game Clear -->
+    <div id="clearModal" class="modal">
+        <div class="modal-content">
+            <h2>Clear!</h2>
+            <div id="clearStats" class="stats-container"></div>
+            <div class="modal-buttons">
+                <button id="shareBtn" class="primary-btn">Share Result</button>
+                <button id="closeModalBtn" class="secondary-btn">Close</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Toast Notification -->
+    <div id="toast" class="toast">Copied to clipboard!</div>
+
     <script src="constants.js"></script>
     <script src="utils.js"></script>
     <script src="seededRandom.js"></script>
